[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Slavina Stefanova <sstefanova@wikimedia.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
sqlalchemy = "^2.0.5.post1"
requests = "^2.28.2"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
